--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">
-          <img src="images/Logo.jpg" height="24" alt="logo" />
-        </a>
+        <a href="/">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -18,8 +16,14 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
@@ -102,9 +106,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">
-        <img src="images/Logo.jpg" height="24" alt="logo" />
-      </a>
+      <a href="/">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
