--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+            <a href="tel:+11000111-11-11">+11000111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <h3>Strategy</h3>
         <p>
