--- a/index.html
+++ b/index.html
@@ -68,48 +68,28 @@
         <ul>
           <li>
             <a href="/">
-              <img
-                src="images/img-3.jpg"
-                width="264"
-                height="260"
-                alt="Mark Guerrero"
-              />
+              <img src="images/img-3.jpg" width="264" alt="Mark Guerrero" />
             </a>
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <a href="/">
-              <img
-                src="images/img-2.jpg"
-                width="264"
-                height="260"
-                alt="Tom Ford"
-              />
+              <img src="images/img-2.jpg" width="264" alt="Tom Ford" />
             </a>
             <h3>Tom Ford</h3>
             <p>Fronted Developer</p>
           </li>
           <li>
             <a href="/">
-              <img
-                src="images/img-1.jpg"
-                width="264"
-                height="260"
-                alt="Camila Garcia"
-              />
+              <img src="images/img-1.jpg" width="264" alt="Camila Garcia" />
             </a>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <a href="/">
-              <img
-                src="images/img.jpg"
-                width="264"
-                height="260"
-                alt="Daniel Wilson"
-              />
+              <img src="images/img.jpg" width="264" alt="Daniel Wilson" />
             </a>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
