--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11000111-11-11">+11000111-11-11</a>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h2>Effective Solutions for Your Business</h2>
         <button type="button">Order Service</button>
       </section>
       <section>
@@ -67,30 +67,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <a href="/">
-              <img src="images/img-3.jpg" width="264" alt="Mark Guerrero" />
-            </a>
+            <img src="images/img-3.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <a href="/">
-              <img src="images/img-2.jpg" width="264" alt="Tom Ford" />
-            </a>
+            <img src="images/img-2.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Fronted Developer</p>
           </li>
           <li>
-            <a href="/">
-              <img src="images/img-1.jpg" width="264" alt="Camila Garcia" />
-            </a>
+            <img src="images/img-1.jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <a href="/">
-              <img src="images/img.jpg" width="264" alt="Daniel Wilson" />
-            </a>
+            <img src="images/img.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
