--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111">+11(000)111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h2>Effective Solutions for Your Business</h2>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>needed</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -74,7 +75,7 @@
           <li>
             <img src="images/img-2.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
-            <p>Fronted Developer</p>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img src="images/img-1.jpg" alt="Camila Garcia" width="264" />
